<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeviceScanActivity"
    android:padding="20dp">


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnscan"
        android:visibility="gone"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btnscan"
        android:onClick="ToggleScan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="10dp"
        android:background="@drawable/back_circle_buttons">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bg_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/ic_scanback"
            android:padding="10dp">
            <ImageView
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_bluetooth"
                android:contentDescription="@string/app_name" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/label_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btnscan"
        app:layout_constraintStart_toStartOf="@+id/btnscan"
        app:layout_constraintEnd_toEndOf="@+id/btnscan"
        android:textColor="@color/purple_700"
        android:text="@string/btn_scan"/>
    <RadioGroup
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="invisible"
        >

        <RadioButton
            android:id="@+id/mode_ble"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_le_scan"
            android:checked="true"
            android:onClick="modeSetting"
            />

        <RadioButton
            android:id="@+id/mode_classic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_classic_scan"
            android:onClick="modeSetting"/>

    </RadioGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/devicelist"
        app:layout_constraintTop_toBottomOf="@+id/label_scan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/no_device"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <ImageView
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/ico_cat"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/cat"
            app:layout_constraintWidth_percent="0.7"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/app_name" />
        <TextView
            android:id="@+id/status"
            app:layout_constraintTop_toBottomOf="@+id/ico_cat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msg_scan_device"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>